# skidbot

./: README.md
skidbot_base/: CMakeLists.txt  package.xml
skidbot_base/include/: skidbot_hw_interface.h
skidbot_base/launch/: hw_control.launch
skidbot_base/src/: skidbot_base.cpp
skidbot_bringup/: CMakeLists.txt  package.xml
skidbot_bringup/launch/: robot_standalone.launch  robot_standalone_orig.launch
skidbot_bringup/param/: board_config.yaml
skidbot_bringup/scripts/: SerialDataGateway.py  arduino_node.py  diff_tf.py  pid_velocity.py  twist_to_motors.py
skidbot_control/: CMakeLists.txt  package.xml
skidbot_control/config/: control.yaml  ekf_global.yaml  ekf_local.yaml  robot_localization.yaml
skidbot_control/launch/: control.launch  ekf_global.launch  ekf_local.launch
skidbot_description/: CMakeLists.txt  package.xml
skidbot_description/gazebo/: skidbot.gazebo.xacro
skidbot_description/launch/: upload_model.launch  view_robot.launch  view_robot_gazebo.launch
skidbot_description/meshes/: baseCentrada1.stl  ruedaCentrada.stl
skidbot_description/rviz/: robot_1.rviz
skidbot_description/urdf/: common_properties.xacro  skidbot.xacro
skidbot_gazebo/: CMakeLists.txt  package.xml
skidbot_gazebo/config/: gazebo_ros_control_params.yaml
skidbot_gazebo/launch/: playpen.launch
